--- a/HelseID.Standard/HelseID.Standard.csproj
+++ b/HelseID.Standard/HelseID.Standard.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="IdentityModel" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
       <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.6.0" />
     </ItemGroup>
 
