Remvove IdentityModel part 2

--- a/HelseID.Standard.Tests/HelseID.Standard.Tests.csproj
+++ b/HelseID.Standard.Tests/HelseID.Standard.Tests.csproj
@@ -33,4 +33,8 @@
       <ProjectReference Include="..\HelseID.Standard\HelseID.Standard.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\ClientAssertions\" />
+    </ItemGroup>
+
 </Project>
