--- a/HelseID.Standard/HelseID.Standard.csproj
+++ b/HelseID.Standard/HelseID.Standard.csproj
@@ -7,11 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="IdentityModel" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.6.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\ClientAssertions\" />
     </ItemGroup>
 
 </Project>
