Can create config from general signing credentials

--- a/HelseId.Library.MachineToMachine/HelseId.Library.MachineToMachine.csproj
+++ b/HelseId.Library.MachineToMachine/HelseId.Library.MachineToMachine.csproj
@@ -9,6 +9,7 @@
         <Title>HelseID Client Library for Machine-to-machine flows</Title>
         <Authors>Norsk Helsenett (NHN)</Authors>
         <Description>This package implements the machine-to-machine flow in HelseID</Description>
+        <PackageId>NHN.HelseID.Library.MachineToMachine</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
