nuget publish builds release build

--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -28,7 +28,6 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Nuget
       run: |
-          dotnet pack HelseId.Library/HelseId.Library.csproj -c Release
-          dotnet pack HelseId.Library.MachineToMachine/HelseId.Library.MachineToMachine.csproj -c Release
+          dotnet build --no-restore -c Release
           dotnet nuget push HelseId.Library/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
           dotnet nuget push HelseId.Library.MachineToMachine/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
