--- a/HelseId.Library.MachineToMachine/HelseId.Library.MachineToMachine.csproj
+++ b/HelseId.Library.MachineToMachine/HelseId.Library.MachineToMachine.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.1.8-alpha</Version>
+        <Version>0.1.9</Version>
         <Title>HelseID Client Library for Machine-to-machine flows</Title>
         <Authors>Norsk Helsenett SF</Authors>
         <Company>Norsk Helsenett SF</Company>
