Rename from M2M to ClientCredentials

--- a/dotnet/HelseId.Library.Tests/HelseId.Library.Tests.csproj
+++ b/dotnet/HelseId.Library.Tests/HelseId.Library.Tests.csproj
@@ -31,7 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\HelseId.Library.MachineToMachine\HelseId.Library.MachineToMachine.csproj" />
+      <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
       <ProjectReference Include="..\HelseId.Library.Mocks\HelseId.Library.Mocks.csproj" />
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
     </ItemGroup>
