pseudocode implementation of key updater

--- a/dotnet/HelseId.Library.SelfService/HelseId.Library.SelfService.csproj
+++ b/dotnet/HelseId.Library.SelfService/HelseId.Library.SelfService.csproj
@@ -20,4 +20,8 @@
     <None Include="readme.md" Pack="true" PackagePath="." />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
+  </ItemGroup>
+
 </Project>
