Initial implementation of the Client-Credentials Grant. Using Builder pattern and some singelton patterns. As an attempt the base functionality is separated into a common-library.
Signed-off-by: Sindre Rannem Bilden <sindre.rannem.bilden@nhn.no>

--- a/.gitignore
+++ b/.gitignore
@@ -82,5 +82,11 @@ http-client.private.env.json
 .idea/.cache/.Apifox_Helper
 .idea/ApifoxUploaderProjectSetting.xml
 
+.idea/
+
 # Macintosh system files
 .DS_Store
+
+.gitconfig
+*.versionsBackup
+*.asc
