--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -6,8 +6,12 @@ name: Nuget Publish
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'dotnet/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'dotnet/**'
 
 jobs:
   build:
