Added missing project reference. Exctracted jwkPrivateKey to external file jwk.json

--- a/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
+++ b/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
@@ -13,7 +13,14 @@
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
+      <ProjectReference Include="..\HelseId.Library.SelfService\HelseId.Library.SelfService.csproj" />
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="jwk.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
