Added HelseId.Library.Mocks project

--- a/dotnet/HelseId.Library.Mocks/HelseId.Library.Mocks.csproj
+++ b/dotnet/HelseId.Library.Mocks/HelseId.Library.Mocks.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
+      <ProjectReference Include="..\HelseId.Library.SelfService\HelseId.Library.SelfService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
