SelfService to Selvbetjening

--- a/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
+++ b/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
-      <ProjectReference Include="..\HelseId.Library.SelfService\HelseId.Library.SelfService.csproj" />
+      <ProjectReference Include="..\HelseId.Library.Selvbetjening\HelseId.Library.Selvbetjening.csproj" />
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
     </ItemGroup>
 
