--- a/dotnet/HelseId.Library.Selvbetjening/HelseId.Library.Selvbetjening.csproj
+++ b/dotnet/HelseId.Library.Selvbetjening/HelseId.Library.Selvbetjening.csproj
@@ -14,6 +14,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
+        <RootNamespace>HelseId.Library.SelfService</RootNamespace>
     </PropertyGroup>
 
   <ItemGroup>
