Added idea folder to gitignore

--- a/dotnet/.gitignore
+++ b/dotnet/.gitignore
@@ -394,4 +394,4 @@ HelseId.Data.Configuration.Tests/appsettings.local.json
 /HelseId.Web.Admin.Blazor.Server/GlobalSuppressions.cs
 
 *helseid_*_log*
-
+.idea/*
