Added support for key rotation from SelfService (#6)
* Added license file

* Added HelseID.Library.SelfSerice to Packages solution, readme.md

* ISigningCredentialReference.cs, StaticSigningCredentialReference.cs

* SelfServiceProjectFile

* Refactoring to support more flexible secret handling

* Refactoring

* Restored support for X509 certificates

* Removed some unused code

* pseudocode implementation of key updater

* Added flexible scope in token request

* Start implementing key rotation for self service

* Added FileBasedSingingCredentialRefererence

* Added HelseIdServiceCollectionExtensions

* Manually building public-private JWK

* Added missing project reference. Exctracted jwkPrivateKey to external file jwk.json

* Using IHttpClientFactory

* Added and using KeyManagementService.cs

* Added SelvbetjeningConfiguration

* Added HelseId.Library.Mocks project

* Added HelseId.Library.SelfService project to HelseID.Packages.sln

* SelfService to Selvbetjening

* More testing

* More tests

* Added IClientSecretEndpoint to HelseIdServiceCollectionExtensions.cs

* More tests

* Split ClientSecretEndpointMock.cs

* Added empty jwk.json

* Added idea folder to gitignore

* Remove indexLayout.xml

---------

Co-authored-by: Rune Andreas Grimstad <rag@rag.no>
Co-authored-by: Oyvind Bech <oyvind.bech@nhn.no>

--- a/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
+++ b/dotnet/HelseID.ClientCredentials.TestApplication/HelseID.ClientCredentials.TestApplication.csproj
@@ -13,7 +13,14 @@
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
+      <ProjectReference Include="..\HelseId.Library.Selvbetjening\HelseId.Library.Selvbetjening.csproj" />
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="jwk.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
