--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -6,12 +6,9 @@ name: Nuget Publish
 on:
   push:
     branches: [ "main" ]
-    paths:
-      - 'dotnet/**'
   pull_request:
     branches: [ "main" ]
-    paths:
-      - 'dotnet/**'
+
 
 jobs:
   build:
@@ -29,8 +26,10 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Nuget
+      if: github.ref == 'refs/heads/main'
       run: |
           dotnet build --no-restore -c Release
           dotnet nuget push HelseId.Library/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
           dotnet nuget push HelseId.Library.ClientCredentials/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
           dotnet nuget push HelseId.Library.Mocks/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
+          dotnet nuget push HelseId.Library.Selvbetjening/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
