Ensure raw response is always included in token repsonses

--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,7 @@ HelseId.Data.Configuration.Tests/appsettings.local.json
 
 *helseid_*_log*
 .idea/*
+
+dotnet/.idea/.idea.HelseID.Packages/.idea/
+
+HelseId.Library/.idea/
