--- a/HelseId.Library.Tests/HelseId.Library.Tests.csproj
+++ b/HelseId.Library.Tests/HelseId.Library.Tests.csproj
@@ -14,7 +14,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FluentAssertions" Version="8.1.1" />
+        <PackageReference Include="FluentAssertions" Version="8.7.0" />
         <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="9.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageReference Include="NUnit" Version="4.3.2" />
@@ -33,6 +33,7 @@
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
       <ProjectReference Include="..\HelseId.Library.Mocks\HelseId.Library.Mocks.csproj" />
+      <ProjectReference Include="..\HelseId.Library.SharedTests\HelseId.Library.SharedTests.csproj" />
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
     </ItemGroup>
 
