Add TargetFramework net8.0 + move common properties into ...
Directory.build.props.

--- a/HelseId.Library.ClientCredentials/HelseId.Library.ClientCredentials.csproj
+++ b/HelseId.Library.ClientCredentials/HelseId.Library.ClientCredentials.csproj
@@ -1,24 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.1.13</Version>
         <Title>HelseID Client Library for Client Credentials flows</Title>
-        <Authors>Norsk Helsenett SF</Authors>
-        <Company>Norsk Helsenett SF</Company>
         <Description>This package implements the Client Credentials flow in HelseID</Description>
         <PackageId>HelseID.Library.ClientCredentials</PackageId>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
     </PropertyGroup>
-
-    <ItemGroup>
-      <None Include="readme.md" Pack="true" PackagePath="." />
-    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
