--- a/HelseId.Library.Mocks/HelseId.Library.Mocks.csproj
+++ b/HelseId.Library.Mocks/HelseId.Library.Mocks.csproj
@@ -1,31 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.1.13</Version>
         <Title>Mocks for HelseID Client Library</Title>
-        <Authors>Norsk Helsenett SF</Authors>
-        <Company>Norsk Helsenett SF</Company>
         <Description>Mock implementations of relevant classes from HelseId.Library</Description>
         <PackageId>HelseID.Library.Mocks</PackageId>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
       <ProjectReference Include="..\HelseId.Library.Selvbetjening\HelseId.Library.Selvbetjening.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="readme.md">
-        <Pack>true</Pack>
-        <PackagePath>.</PackagePath>
-      </None>
     </ItemGroup>
 
 </Project>
