--- a/HelseId.Library.Selvbetjening/HelseId.Library.Selvbetjening.csproj
+++ b/HelseId.Library.Selvbetjening/HelseId.Library.Selvbetjening.csproj
@@ -1,25 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.1.13</Version>
         <Title>HelseID package for communication with NHN SelfService API</Title>
-        <Authors>Norsk Helsenett SF</Authors>
-        <Company>Norsk Helsenett SF</Company>
         <Description>This package implements library communication with the HelseID SelfService API</Description>
         <PackageId>HelseID.Library.SelfService</PackageId>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
         <RootNamespace>HelseId.Library.Selvbetjening</RootNamespace>
     </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="readme.md" Pack="true" PackagePath="." />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
