--- a/HelseId.Library/HelseId.Library.csproj
+++ b/HelseId.Library/HelseId.Library.csproj
@@ -1,25 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.1.13</Version>
         <Title>HelseID Client Library</Title>
-        <Authors>Norsk Helsenett SF</Authors>
-        <Company>Norsk Helsenett SF</Company>
         <Description>This is the base package for the HelseID client library. Make sure to also reference the correct package for the flow your application uses.</Description>
         <PackageId>HelseID.Library</PackageId>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
     </PropertyGroup>
   
-    <ItemGroup>
-      <None Include="readme.md" Pack="true" PackagePath="." />
-    </ItemGroup>
-
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
