--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -1,34 +1,28 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: Nuget Publish
+name: Release
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  release:
+    types: [published]
 
 jobs:
   build:
+    if: github.repository == 'NorskHelsenett/HelseID.Library'
+
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 9.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: Nuget
-      if: github.ref == 'refs/heads/main'
-      run: |
-          dotnet build --no-restore -c Release
+      - uses: actions/checkout@v5
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 9.0.x
+      - name: Build NuGet Packages
+        run: |
+          dotnet pack HelseId.Library/HelseId.Library.csproj -c Release
+          dotnet pack HelseId.Library.ClientCredentials/HelseId.Library.ClientCredentials.csproj -c Release
+          dotnet pack HelseId.Library.Mocks/HelseId.Library.Mocks.csproj -c Release
+          dotnet pack HelseId.Library.Selvbetjening/HelseId.Library.Selvbetjening.csproj -c Release
+      - name: Push NuGet Packages
+        run: |
           dotnet nuget push HelseId.Library/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
           dotnet nuget push HelseId.Library.ClientCredentials/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
           dotnet nuget push HelseId.Library.Mocks/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
