--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: | 
+            8.0.x
+            9.0.x
       - name: Build NuGet Packages
         run: |
           dotnet pack HelseId.Library/HelseId.Library.csproj -c Release
