--- a/.github/workflows/nuget_deploy.yml
+++ b/.github/workflows/nuget_deploy.yml
@@ -18,6 +18,7 @@ jobs:
             8.0.x
             9.0.x
       - name: Build projects
+        run: |
           dotnet build HelseId.Library/HelseId.Library.csproj -c Release
           dotnet build HelseId.Library.ClientCredentials/HelseId.Library.ClientCredentials.csproj -c Release
           dotnet build HelseId.Library.Mocks/HelseId.Library.Mocks.csproj -c Release
