--- a/HelseId.Library.SharedTests/HelseId.Library.SharedTests.csproj
+++ b/HelseId.Library.SharedTests/HelseId.Library.SharedTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Helseid.Library.SharedTests</RootNamespace>
@@ -9,7 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="8.8.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
     </ItemGroup>
 
 </Project>
