--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,6 +11,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://www.nhn.no/tjenester/helseid</PackageProjectUrl>
     <TreatWarningsAsError>true</TreatWarningsAsError>
+    <EnableNUnitRunner>true</EnableNUnitRunner> 
   </PropertyGroup>
   <ItemGroup>
     <None Include="../LICENSE" Pack="true" PackagePath="" />
