--- a/HelseId.Library.ClientCredentials.Tests/HelseId.Library.ClientCredentials.Tests.csproj
+++ b/HelseId.Library.ClientCredentials.Tests/HelseId.Library.ClientCredentials.Tests.csproj
@@ -1,34 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj" />
-      <ProjectReference Include="..\HelseId.Library.Tests\HelseId.Library.Tests.csproj" />
-      <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HelseId.Library.ClientCredentials\HelseId.Library.ClientCredentials.csproj"/>
+    <ProjectReference Include="..\HelseId.Library.Tests\HelseId.Library.Tests.csproj"/>
+    <ProjectReference Include="..\HelseId.Library\HelseId.Library.csproj"/>
+  </ItemGroup>
 
-    <ItemGroup>
-      <PackageReference Include="coverlet.collector" Version="6.0.4">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="FluentAssertions" Version="8.8.0" />
-      <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.0.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-      <PackageReference Include="NUnit" Version="4.4.0" />
-      <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />
-      <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="8.8.0"/>
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
+    <PackageReference Include="NUnit" Version="4.4.0"/>
+    <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter" Version="6.0.0"/>
+    <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0"/>
+  </ItemGroup>
 
 </Project>
