--- a/HelseId.Library.Selvbetjening.Tests/HelseId.Library.Selvbetjening.Tests.csproj
+++ b/HelseId.Library.Selvbetjening.Tests/HelseId.Library.Selvbetjening.Tests.csproj
@@ -1,22 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <RootNamespace>HelseId.Library.Selvbetjening.Tests</RootNamespace>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
+    <RootNamespace>HelseId.Library.Selvbetjening.Tests</RootNamespace>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-      <PackageReference Include="NUnit" Version="4.4.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
+    <PackageReference Include="NUnit" Version="4.4.0"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="6.0.0"/>
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\HelseId.Library.Mocks\HelseId.Library.Mocks.csproj" />
-      <ProjectReference Include="..\HelseId.Library.Selvbetjening\HelseId.Library.Selvbetjening.csproj" />
-      <ProjectReference Include="..\HelseId.Library.Tests\HelseId.Library.Tests.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HelseId.Library.Mocks\HelseId.Library.Mocks.csproj"/>
+    <ProjectReference Include="..\HelseId.Library.Selvbetjening\HelseId.Library.Selvbetjening.csproj"/>
+    <ProjectReference Include="..\HelseId.Library.Tests\HelseId.Library.Tests.csproj"/>
+  </ItemGroup>
 
 </Project>
